fix: css overflow-y => x

--- a/src/scss/components/table/table.scss
+++ b/src/scss/components/table/table.scss
@@ -88,7 +88,7 @@
           align-items: center;
           padding-left: 50px;
           flex-wrap: nowrap;
-          overflow-y: scroll;
+          overflow-x: auto;
           border-right: 2px;
           & span {
             font-family: Inter;
